crates/pg_syntax/tests/snapshots/postgres_regress/timestamptz@79.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO TIMESTAMPTZ_TBL VALUES ('Feb 16 17:32:01 0097 BC');"
---
InsertStmt@0..63
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..27
    Ident@12..27 "TIMESTAMPTZ_TBL"
  Whitespace@27..28 " "
  SelectStmt@28..61
    Values@28..34 "VALUES"
    Whitespace@34..35 " "
    Ascii40@35..36 "("
    List@36..61
      AConst@36..61
        Sconst@36..61 "'Feb 16 17:32:01 0097 ..."
  Ascii41@61..62 ")"
  Ascii59@62..63 ";"

